Push the collect stub to git
